[tool.poetry]
name = "duplicate_image_finder"
version = "0.2.5"
description = "duplicate image finder helps you find duplicate or similar images as well as delete them."
authors = ["Amit <lordamit@gmail.com>"]
readme = "readme.md"
homepage = "https://github.com/LordAmit/duplicate_image_finder"
repository = "https://github.com/LordAmit/duplicate_image_finder"
keywords = [
    "image",
    "similar image",
    "duplicate image",
    "imagehash"
]

[tool.poetry.scripts]
duplicate-image-finder = "duplicate_image_finder.duplicate_finder:main"

[tool.poetry.dependencies]
python = "~3.9"
Flask = "^2.1.2"
Pillow = "^9.1.1"
termcolor = "^1.1.0"
types-termcolor = "^1.1.4"
pandas = "^1.4.2"
python-magic-bin = "0.4.14"
ImageHash = "^4.2.1"
Flask-Cors = "^3.0.10"
Jinja2 = "^3.1.2"
more-itertools = "^8.13.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
